--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,33 +1,21 @@
-
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
 @use '~@angular/material' as mat;
 // Plus imports for other components in your app.
-
 // Include the common styles for Angular Material. We include this here so that you only
 // have to load a single css file for Angular Material in your app.
 // Be sure that you only ever include this mixin once!
 @include mat.core();
-
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
 $lamasat-primary: mat.define-palette(mat.$indigo-palette);
 $lamasat-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
-
 // The warn palette is optional (defaults to red).
 $lamasat-warn: mat.define-palette(mat.$red-palette);
-
 // Create the theme object. A theme consists of configurations for individual
 // theming systems such as "color" or "typography".
-$lamasat-theme: mat.define-light-theme((
-  color: (
-    primary: $lamasat-primary,
-    accent: $lamasat-accent,
-    warn: $lamasat-warn,
-  )
-));
-
+$lamasat-theme: mat.define-light-theme(( color: ( primary: $lamasat-primary, accent: $lamasat-accent, warn: $lamasat-warn, )));
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
 // that you are using.
@@ -35,8 +23,16 @@ $lamasat-theme: mat.define-light-theme((
 
 /* You can add global styles to this file, and also import other style files */
 
-html {
-    background-color: #F3F3F3;
+html,
+body {
+    height: 100%;
 }
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+body {
+    margin: 0;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+img {
+    object-fit: cover;
+}
