Employee Form Add

--- a/src/app/components/main-page/main-page.component.html
+++ b/src/app/components/main-page/main-page.component.html
@@ -3,7 +3,9 @@
 <app-sidebar></app-sidebar>
 
 <div class="container">
-    <app-main></app-main>
+    <!-- <app-main></app-main> -->
+    <app-employee-form></app-employee-form>
+    <!-- <app-employee-form></app-employee-form> -->
 </div>
 
-<router-outlet></router-outlet>
+<!-- <router-out-let></router-out-let>ng  -->
