--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -9,7 +9,7 @@
                 <small class="title-job">Super Admin</small>
             </div>
             <div class="exit mx-3">
-                <a href="#">
+                <a href="login">
                     <img src="assets/navbar/exit.svg" alt="Exit">
                 </a>
             </div>
