--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -16,10 +16,7 @@
                     <p>Please login to your account to access</p>
                 </div>
 
-                <mat-form-field class="example-full-width mt-2">
-                    <mat-label>Username</mat-label>
-                    <input matInput>
-                </mat-form-field>
+                <app-angular-input label="Username"></app-angular-input>
 
                 <mat-form-field class="example-full-width mt-2">
                     <mat-label>Password</mat-label>
