--- a/src/app/components/shared/sidebar/sidebar.component.html
+++ b/src/app/components/shared/sidebar/sidebar.component.html
@@ -3,7 +3,7 @@
         <div class="logo p-4">
             <img src="assets/sidebar/Logo Wight.svg" alt="Logo" width="150">
         </div>
-        <ul class="mt-2 p-0" style="display: flex;
+        <ul class="mt-2 p-0 custom-scrollbar" style="display: flex;
         flex-direction: column;">
             <li class="d-flex d-flex d-flex p-3" *ngFor="let item of arralylist">
                 <div class="left-hover"></div>
