--- a/src/app/components/employee/main/main.component.html
+++ b/src/app/components/employee/main/main.component.html
@@ -1,181 +1,36 @@
 <div class="container">
     <section>
-        <div class="row " style="display: flex;justify-content: center;">
-            <div class="col-md-2">Name</div>
-            <div class="col-md-2">Mobile</div>
-            <div class="col-md-2">Email</div>
-            <div class="col-md-2">Department</div>
-            <div class="col-md-2">Branch</div>
-        </div>
-        <div class="row mt-3">
-            <div class="card p-3" style="flex-direction: row;border-radius: 13px;">
-                <div class="mx-2">mohammed omar hasan </div>
-                <div class="mx-3">+963 953429502</div>
-                <div class="mx-3">hasan@gmail.com </div>
-                <div class="mx-4">Design </div>
-                <div class="mx-4">jamelahi </div>
-                <div class="mx-3">
-                    <a href="#">
-                        <img src="assets/action-data/Group 317.svg" alt="">
-                    </a>
-                </div>
-                <div class="mx-3">
-                    <a href="#">
-                        <img src="assets/action-data/edit.svg" alt="">
-                    </a>
-                </div>
-                <div class="mx-2">
-                    <a href="#">
-                        <img src="assets/action-data/delete.svg" alt="">
-                    </a>
-                </div>
-            </div>
-        </div>
-        <div class="row mt-3">
-            <div class="card p-3" style="flex-direction: row;border-radius: 13px;">
-                <div class="mx-2">mohammed omar hasan </div>
-                <div class="mx-3">+963 953429502</div>
-                <div class="mx-3">hasan@gmail.com </div>
-                <div class="mx-4">Design </div>
-                <div class="mx-4">jamelahi </div>
-                <div class="mx-3">
-                    <a href="#">
-                        <img src="assets/action-data/Group 317.svg" alt="">
-                    </a>
-                </div>
-                <div class="mx-3">
-                    <a href="#">
-                        <img src="assets/action-data/edit.svg" alt="">
-                    </a>
-                </div>
-                <div class="mx-2">
-                    <a href="#">
-                        <img src="assets/action-data/delete.svg" alt="">
-                    </a>
-                </div>
-            </div>
-        </div>
-        <div class="row mt-3">
-            <div class="card p-3" style="flex-direction: row;border-radius: 13px;">
-                <div class="mx-2">mohammed omar hasan </div>
-                <div class="mx-3">+963 953429502</div>
-                <div class="mx-3">hasan@gmail.com </div>
-                <div class="mx-4">Design </div>
-                <div class="mx-4">jamelahi </div>
-                <div class="mx-3">
-                    <a href="#">
-                        <img src="assets/action-data/Group 317.svg" alt="">
-                    </a>
-                </div>
-                <div class="mx-3">
-                    <a href="#">
-                        <img src="assets/action-data/edit.svg" alt="">
-                    </a>
-                </div>
-                <div class="mx-2">
-                    <a href="#">
-                        <img src="assets/action-data/delete.svg" alt="">
-                    </a>
-                </div>
-            </div>
-        </div>
-        <div class="row mt-3">
-            <div class="card p-3" style="flex-direction: row;border-radius: 13px;">
-                <div class="mx-2">mohammed omar hasan </div>
-                <div class="mx-3">+963 953429502</div>
-                <div class="mx-3">hasan@gmail.com </div>
-                <div class="mx-4">Design </div>
-                <div class="mx-4">jamelahi </div>
-                <div class="mx-3">
-                    <a href="#">
-                        <img src="assets/action-data/Group 317.svg" alt="">
-                    </a>
-                </div>
-                <div class="mx-3">
-                    <a href="#">
-                        <img src="assets/action-data/edit.svg" alt="">
-                    </a>
-                </div>
-                <div class="mx-2">
-                    <a href="#">
-                        <img src="assets/action-data/delete.svg" alt="">
-                    </a>
-                </div>
-            </div>
-        </div>
-        <div class="row mt-3">
-            <div class="card p-3" style="flex-direction: row;border-radius: 13px;">
-                <div class="mx-2">mohammed omar hasan </div>
-                <div class="mx-3">+963 953429502</div>
-                <div class="mx-3">hasan@gmail.com </div>
-                <div class="mx-4">Design </div>
-                <div class="mx-4">jamelahi </div>
-                <div class="mx-3">
-                    <a href="#">
-                        <img src="assets/action-data/Group 317.svg" alt="">
-                    </a>
-                </div>
-                <div class="mx-3">
-                    <a href="#">
-                        <img src="assets/action-data/edit.svg" alt="">
-                    </a>
-                </div>
-                <div class="mx-2">
-                    <a href="#">
-                        <img src="assets/action-data/delete.svg" alt="">
-                    </a>
-                </div>
-            </div>
-        </div>
-        <div class="row mt-3">
-            <div class="card p-3" style="flex-direction: row;border-radius: 13px;">
-                <div class="mx-2">mohammed omar hasan </div>
-                <div class="mx-3">+963 953429502</div>
-                <div class="mx-3">hasan@gmail.com </div>
-                <div class="mx-4">Design </div>
-                <div class="mx-4">jamelahi </div>
-                <div class="mx-3">
-                    <a href="#">
-                        <img src="assets/action-data/Group 317.svg" alt="">
-                    </a>
-                </div>
-                <div class="mx-3">
-                    <a href="#">
-                        <img src="assets/action-data/edit.svg" alt="">
-                    </a>
-                </div>
-                <div class="mx-2">
-                    <a href="#">
-                        <img src="assets/action-data/delete.svg" alt="">
-                    </a>
-                </div>
-            </div>
-        </div>
-        <div class="row mt-3">
-            <div class="card p-3" style="flex-direction: row;border-radius: 13px;">
-                <div class="mx-2">mohammed omar hasan </div>
-                <div class="mx-3">+963 953429502</div>
-                <div class="mx-3">hasan@gmail.com </div>
-                <div class="mx-4">Design </div>
-                <div class="mx-4">jamelahi </div>
-                <div class="mx-3">
-                    <a href="#">
-                        <img src="assets/action-data/Group 317.svg" alt="">
-                    </a>
-                </div>
-                <div class="mx-3">
-                    <a href="#">
-                        <img src="assets/action-data/edit.svg" alt="">
-                    </a>
-                </div>
-                <div class="vl"></div>
-                <div class="mx-2">
-
-                    <a href="#">
-                        <img src="assets/action-data/delete.svg" alt="">
-                    </a>
-                </div>
-            </div>
-        </div>
+        <table class="w-100" style="text-align: center;">
+            <thead>
+                <tr>
+                    <th *ngFor="let head of headers">{{head}}</th>
+                    <th>
+                        <button class="btn btn-success">+ Add New Employee</button>
+                    </th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let object of datasource" class="card mt-3" style="display: table-row;height: 65px;">
+                    <td>{{object.name}}</td>
+                    <td>{{object.mobile}}</td>
+                    <td>{{object.email}}</td>
+                    <td>{{object.department}}</td>
+                    <td>{{object.branch}}</td>
+                    <td style="display: flex;justify-content: space-evenly;padding-top: 16px;">
+                        <a href="#">
+                            <img src="assets/action-data/Group 317.svg" width="29">
+                        </a>
+                        <div class="vl"></div>
+                        <a href="#">
+                            <img src="assets/action-data/edit.svg" width="29">
+                        </a>
+                        <div class="vl"></div>
+                        <a href="#">
+                            <img src="assets/action-data/delete.svg" width="25">
+                        </a>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
     </section>
 </div>
