--- a/src/app/components/main-page/main-page.component.html
+++ b/src/app/components/main-page/main-page.component.html
@@ -3,8 +3,8 @@
 <app-sidebar></app-sidebar>
 
 <div class="container">
-    <!-- <app-main></app-main> -->
-    <app-employee-form></app-employee-form>
+    <!-- <app-employee-form></app-employee-form> -->
+    <app-main></app-main>
     <!-- <app-employee-form></app-employee-form> -->
 </div>
 
