--- a/src/styles.scss
+++ b/src/styles.scss
@@ -36,3 +36,27 @@ body {
 img {
     object-fit: cover;
 }
+
+body .custom-scrollbar {
+    overflow: scroll;
+    position: absolute;
+}
+
+ ::-webkit-scrollbar {
+    width: 20px;
+}
+
+ ::-webkit-scrollbar-track {
+    background-color: transparent;
+}
+
+ ::-webkit-scrollbar-thumb {
+    background-color: #a8bbbf;
+    border-radius: 20px;
+    border: 6px solid transparent;
+    background-clip: content-box;
+}
+
+ ::-webkit-scrollbar-thumb:hover {
+    background-color: #a8bbbf;
+}
