--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -28,7 +28,7 @@
                         <app-angular-input label="Password" type="password"></app-angular-input>
                     </div>
                 </div>
-                <button class="btn btn-primary mt-3">Login</button>
+                <button class="btn btn-primary mt-3" (click)="routeHome()">Login</button>
             </div>
         </div>
     </div>
