--- a/src/app/components/customer/customer-info/customer-info.component.html
+++ b/src/app/components/customer/customer-info/customer-info.component.html
@@ -6,14 +6,14 @@
         <form [formGroup]="customerForm" (ngSubmit)="Submit(customerForm.value)">
             <div class="d-flex flex-row-reverse">
                 <div class="p-2">
-                    <button type="submit" class="btn btn-success" style="font-size: small;">
-                        <img src="assets/action-data/save.svg" width="20"> Save</button>
+                    <button type="submit" class="btn btn-danger" style="font-size: small;">
+                        <img src="assets/action-data/edit W.svg" width="20"> Edit</button>
                 </div>
             </div>
             <div class="card p-4" style="border-radius: 20px;">
                 <div class="row">
                     <div class="col-md-6">
-                        <label for="customerId">Customer ID <span class="text-danger">*</span></label>
+                        <label for="customerId">Customer ID </label>
                         <input type="text" class="form-control" id="customerId" formControlName="serial">
                     </div>
                     <div class="col-md-6">
@@ -29,17 +29,17 @@
                 </div>
                 <div class="row mt-4">
                     <div class="col-md-6">
-                        <label for="name">Name <span class="text-danger">*</span></label>
+                        <label for="name">Name </label>
                         <input type="text" class="form-control" id="name" formControlName="name">
                     </div>
                     <div class="col-md-6">
-                        <label for="email">Email <span class="text-danger">*</span></label>
+                        <label for="email">Email</label>
                         <input type="email" class="form-control" id="email" formControlName="email">
                     </div>
                 </div>
                 <div class="row mt-4">
                     <div class="col-md-6">
-                        <label for="phone">Phone <span class="text-danger">*</span></label>
+                        <label for="phone">Phone </label>
                         <input type="text" class="form-control" id="phone" formControlName="phone">
                     </div>
                     <div class="col-md-6">
@@ -53,7 +53,7 @@
                         <input type="text" class="form-control" id="phone2" formControlName="phone2">
                     </div>
                     <div class="col-md-6">
-                        <label for="shipment" class="mb-2">Shipment <span class="text-danger">*</span></label>
+                        <label for="shipment" class="mb-2">Shipment </label>
                         <br>
                         <div class="row">
                             <div class="col-md-4">
