--- a/src/app/components/employee/main/main.component.html
+++ b/src/app/components/employee/main/main.component.html
@@ -5,7 +5,7 @@
                 <tr>
                     <th *ngFor="let head of headers">{{head}}</th>
                     <th>
-                        <a routerLink="customer/add">
+                        <a routerLink="/employee/form">
                             <button class="btn btn-success">+ Add New Employee</button>
                         </a>
                     </th>
@@ -21,9 +21,7 @@
                     <td style="display: flex;justify-content: space-evenly;padding-top: 16px;">
                         <img src="assets/action-data/Group 317.svg" width="29" (click)="GetEmployeeInfo(object.id)" style="cursor: pointer;">
                         <div class="vl"></div>
-                        <a href="#">
-                            <img src="assets/action-data/edit.svg" width="29">
-                        </a>
+                        <img src="assets/action-data/edit.svg" width="29" (click)="routeToEdit(object.id)" style="cursor: pointer;">
                         <div class="vl"></div>
                         <img src="assets/action-data/delete.svg" width="25" (click)="DeleteEmployee(object.id)" style="cursor: pointer;">
                     </td>
