--- a/src/app/components/customer/customer-form/customer-form.component.html
+++ b/src/app/components/customer/customer-form/customer-form.component.html
@@ -58,13 +58,13 @@
                         <div class="row">
                             <div class="col-md-4">
                                 <div class="form-check">
-                                    <input class="form-check-input" type="radio" name="flexRadioDefault" formControlName="is_charge" value="true">
+                                    <input class="form-check-input" type="radio" name="is_charge" formControlName="is_charge" value="true">
                                     <label class="form-check-label">Yes</label>
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="form-check">
-                                    <input class="form-check-input" type="radio" name="flexRadioDefault" checked formControlName="is_charge" value="true">
+                                    <input class="form-check-input" type="radio" name="is_charge" checked formControlName="is_charge" value="true">
                                     <label class="form-check-label">No</label>
                                 </div>
                             </div>
